1章の第一節を結構書いた

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -89,7 +89,7 @@
 \addcontentsline{toc}{chapter}{参考文献}
 \lhead[参考文献]{}
 %\renewcommand{\refname}{引用文献}
-\thispagestyle{empty}
+%\thispagestyle{empty}
 
 \bibliographystyle{plain}
 \bibliography{references}
