--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,5 +1,4 @@
-@book{
-  BornWolf:1999:Book,
+@book{BornWolf:1999:Book,
   added-at = {2009-05-17T11:48:37.000+0200},
   asin = {0521642221},
   author = {Born, Max and Wolf, Emil},
@@ -16,6 +15,21 @@
   timestamp = {2009-05-17T11:48:37.000+0200},
   title = {Principles of Optics: Electromagnetic Theory of Propagation, Interference and Diffraction of Light (7th Edition)},
   year = 1999
+}
+@article{Yamada:20,
+    author = {Jumpei Yamada and Satoshi Matsuyama and Raita Hirose and Yoshihiro Takeda and Yoshiki Kohmura and Makina Yabashi and Kazuhiko Omote and Tetsuya Ishikawa and Kazuto Yamauchi},
+    journal = {Optica},
+    keywords = {Computed tomography; Hard x rays; Image quality; Photon counting; X ray microscopy; X ray optics},
+    number = {4},
+    pages = {367--370},
+    publisher = {OSA},
+    title = {Compact full-field hard x-ray microscope based on advanced Kirkpatrick--Baez mirrors},
+    volume = {7},
+    month = {Apr},
+    year = {2020},
+    url = {http://www.osapublishing.org/optica/abstract.cfm?URI=optica-7-4-367},
+    doi = {10.1364/OPTICA.386012},
+    abstract = {X-ray full-field microscopy is a promising method for nondestructive observation of opaque materials because it can attain a high resolution and wide field of view without sample scanning. We recently developed hard x-ray objective optics, which are key devices for full-field microscopy, based on total-reflection mirrors with high throughput and achromatic properties. The objective optics consist of two types of advanced Kirkpatrick--Baez mirrors configured as crossed one-dimensional Wolter type I and type III optics. The designed optics possessed magnification factors of 42--45 with a compact camera length of approximately 2 m. The hard x-ray full-field microscope based on this system was tested at the BL29XU beamline at SPring-8. We were able to resolve 100-nm periods (50-nm line widths) of a resolution test chart at a photon energy of 15 keV over 30 h, which demonstrated the remarkable stability of this system. The image quality was preserved over a wide photon energy range from 9 to 15 keV. A periodic dot pattern with dot diameters of 300 nm, formed on a 775-{\textmu}m-thick Si substrate, was three-dimensionally visualized by computed tomography.},
 }
 @article{Gaskin2019,
 abstract = {{\textcopyright} The Authors. Published by SPIE under a Creative Commons Attribution 4.0 Unported License. Distribution or reproduction of this work in whole or in part requires full attribution of the original publication, including its DOI. Lynx, one of the four strategic mission concepts under study for the 2020 Astrophysics Decadal Survey, provides leaps in capability over previous and planned X-ray missions and provides synergistic observations in the 2030s to a multitude of space-and ground-based observatories across all wavelengths. Lynx provides orders of magnitude improvement in sensitivity, on-axis subarcsecond imaging with arcsecond angular resolution over a large field of view, and high-resolution spectroscopy for point-like and extended sources in the 0.2-to 10-keV range. The Lynx architecture enables a broad range of unique and compelling science to be carried out mainly through a General Observer Program. This program is envisioned to include detecting the very first seed black holes, revealing the high-energy drivers of galaxy formation and evolution, and characterizing the mechanisms that govern stellar evolution and stellar ecosystems. The Lynx optics and science instruments are carefully designed to optimize the science capability and, when combined, form an exciting architecture that utilizes relatively mature technologies for a cost that is compatible with the projected NASA Astrophysics budget.},
