1章のNested Wolter Mirrorの説明を書いた

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -92,7 +92,7 @@
 %  Acknowledgements
 % ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
 \input{./acknowledgements/acknowledgements}
-\addcontentsline{toc}{chapter}{謝辞} %   /* 目次に謝辞項を追加する */
+\addcontentsline{toc}{chapter}{謝辞} %   /* add acknowledgement to the table of contents */
 
 % End of Document
 \end{document}
