algorithm,algorithmicを追加し3章のBIO,HIO,PIE,ePIE,rPIEの説明を書いた

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -1,10 +1,12 @@
 \documentclass[12pt]{jsbook}
 \usepackage{style/pethesis}
 \usepackage{amsmath,amssymb,bm}
-%\usepackage{style/subfigure}
 \usepackage{minitoc}
 \usepackage{hhline}
-%\usepackage{slashbox}
+%\usepackage{style/algorithmic}
+%\usepackage{style/algorithm}
+\usepackage{algorithmic}
+\usepackage{algorithm}
 \usepackage{booktabs}
 \usepackage[dvipdfmx]{graphicx} 
 %\usepackage[dvipdfmx,draft]{graphicx} %画像を表示せず枠だけ確保しコンパイル時間減らす
