1章イントロの誤字脱字・引用の抜けを修正

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,26 @@
+@inproceedings{weko_20796_1,
+   author	 = "成影,典之 and 高橋,忠幸 and 古川,健人 and 渡辺,伸 and 萩野,浩一 and 三石,郁之 and Glesener,Lindsay and Musset,Sophie and Vievering,Juliana Therese and Courtade,Sasha and Buitrago-Casas,Juan Camilo and Dalton,Gregory and Turin,Paul and Krucker,Sam and Christe,Steven and Ryan,Daniel and Panchapakesan,Athiray and Bongiorno,Stephen and Ramsey,Brian",
+   title	 = "太陽X線集光撮像分光観測ロケット実験FOXSIシリーズ",
+   booktitle	 = "観測ロケットシンポジウム2019 講演集",
+   year 	 = "2019",
+   volume	 = "",
+   number	 = "",
+   publisher	 = "宇宙航空研究開発機構宇宙科学研究所(JAXA)(ISAS)",
+   month	 = "aug"
+}
+@INPROCEEDINGS{2019AGUFMSH31C3315V,
+       author = {{Vievering}, J.~T. and {Glesener}, L. and {Buitrago-Casas}, J.~C. and {Panchapakesan}, S.~A. and {Musset}, S. and {Duncan}, J.~M. and {Narukage}, N. and {Ryan}, D. and {Inglis}, A.~R. and {Takahashi}, T. and {Watanabe}, S. and {Christe}, S. and {Krucker}, S. and {Turin}, P. and {Ramsey}, B.},
+        title = "{FOXSI-4: Instrument Upgrades for a Proposed Fourth Focusing Optics X-Ray Solar Imager Sounding Rocket Experiment}",
+     keywords = {7534 Radio emissions, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7549 Ultraviolet emissions, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7554 X-rays, gamma rays, and neutrinos, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7594 Instruments and techniques, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY},
+    booktitle = {AGU Fall Meeting Abstracts},
+         year = 2019,
+       volume = {2019},
+        month = dec,
+          eid = {SH31C-3315},
+        pages = {SH31C-3315},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019AGUFMSH31C3315V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 @book{BornWolf:1999:Book,
   author = {Born, Max and Wolf, Emil},
   publisher = {Cambridge University Press},
