2章の理想集光を書こうとしたがHPDの計算は回折積分でやる必要がありそうだと判断

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -18,8 +18,8 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{natbib}
-%\renewcommand{\refname}{}
 \usepackage{siunitx}
+\usepackage{comment}
 
 %\renewcommand{\figurename}{Fig. }
 %\renewcommand{\tablename}{Table }
