1章の輪帯の細さの説明とプロファイル計測の欠点を書いた

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -65,3 +65,111 @@
     title = {{Lynx X-Ray Observatory: an overview}},
     volume = {5},
 }
+@article{Fienup1982,
+    abstract = {Iterative algorithms for phase retrieval from intensity data are compared to gradient search methods. Both the problem of phase retrieval from two intensity measurements (in electron microscopy or wave front sensing) and the problem of phase retrieval from a single intensity measurement plus a non-negativity constraint (in astronomy) are considered, with emphasis on the latter. It is shown that both the error-reduction algorithm for the problem of a single intensity measurement and the Gerchberg-Saxton algorithm for the problem of two intensity measurements converge. The error-reduction algorithm is also shown to be closely related to the steepest-descent method. Other algorithms, including the input-output algorithm and the conjugate-gradient method, are shown to converge in practice much faster than the error-reduction algorithm. Examples are shown.},
+    author = {Fienup, J. R.},
+    doi = {10.1364/ao.21.002758},
+    file = {:home/dieu/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Fienup - 1982 - Phase retrieval algorithms a comparison.pdf:pdf},
+    issn = {0003-6935},
+    journal = {Applied Optics},
+    mendeley-groups = {PhaseRetrieval},
+    number = {15},
+    pages = {2758},
+    pmid = {20396114},
+    title = {{Phase retrieval algorithms: a comparison}},
+    volume = {21},
+    year = {1982}
+}
+@article{Godden2016,
+    abstract = {{\textcopyright} 2016 Optical Society of America. Quantitative phase imaging (QPI) utilizes refractive index and thickness variations that lead to optical phase shifts. This gives contrast to images of transparent objects. In quantitative biology, phase images are used to accurately segment cells and calculate properties such as dry mass, volume and proliferation rate. The fidelity of the measured phase shifts is of critical importance in this field. However to date, there has been no standardized method for characterizing the performance of phase imaging systems. Consequently, there is an increasing need for protocols to test the performance of phase imaging systems using well-defined phase calibration and resolution targets. In this work, we present a candidate for a standardized phase resolution target, and measurement protocol for the determination of the transfer of spatial frequencies, and sensitivity of a phase imaging system. The target has been carefully designed to contain well-defined depth variations over a broadband range of spatial frequencies. In order to demonstrate the utility of the target, we measure quantitative phase images on a ptychographic microscope, and compare the measured optical phase shifts with Atomic Force Microscopy (AFM) topography maps and surface profile measurements from coherence scanning interferometry. The results show that ptychography has fully quantitative nanometer sensitivity in optical path differences over a broadband range of spatial frequencies for feature sizes ranging from micrometers to hundreds of micrometers.},
+    author = {Godden, T. M. and Mu{\~{n}}iz-Piniella, A. and Claverley, J. D. and Yacoot, A. and Humphry, M. J.},
+    doi = {10.1364/oe.24.007679},
+    file = {:home/dieu/Downloads/oe-24-7-7679.pdf:pdf},
+    issn = {1094-4087},
+    journal = {Optics Express},
+    number = {7},
+    pages = {7679},
+    title = {{Phase calibration target for quantitative phase imaging with ptychography}},
+    volume = {24},
+    year = {2016}
+}
+@ARTICLE{1952AnP...445...94W,
+    author = {{Wolter}, Hans},
+    title = "{Spiegelsysteme streifenden Einfalls als abbildende Optiken f{\"u}r R{\"o}ntgenstrahlen}",
+    journal = {Annalen der Physik},
+    year = 1952,
+    month = jan,
+    volume = {445},
+    number = {1},
+    pages = {94-114},
+    doi = {10.1002/andp.19524450108},
+    adsurl = {https://ui.adsabs.harvard.edu/abs/1952AnP...445...94W},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{Takeo2015,
+    abstract = {{\textcopyright} 2015 SPIE. It is possible to achieve soft X-ray nanofocusing with a high efficiency and no chromatic aberration by using an ultraprecise ellipsoidal mirror. Surface figure metrology is key in the improvement of surface figure accuracy. In this study, we propose a ptychographic phase retrieval method using a visible light laser to measure the surface figure error profile of an ellipsoidal mirror. We introduce a simple experimental system for ptychographic phase retrieval and demonstrate the basic performance of the proposed system. Obtainable wavefront information provides both the figure error and the alignment of the ellipsoidal mirror that yield the best focusing. This developed method is required for offline adjustments when an ellipsoidal mirror is installed in the beamline of synchrotron radiation or X-ray free-electron laser light sources.},
+    author = {Takeo, Yoko and Saito, Takahiro and Mimura, Hidekazu},
+    doi = {10.1117/12.2188824},
+    file = {:home/dieu/Downloads/95880A.pdf:pdf},
+    isbn = {9781628417548},
+    issn = {1996756X},
+    journal = {Advances in X-Ray/EUV Optics and Components X},
+    keywords = {ellipsoidal mirror,figure measurement,phase retrieval,ptychography,wavefront sensing,x-ray focusing},
+    number = {August 2015},
+    pages = {95880A},
+    title = {{Evaluation of surface figure error profile of ellipsoidal mirror for soft x-ray focusing}},
+    volume = {9588},
+    year = {2015}
+}
+@article{Latychevskaia2018,
+    abstract = {In this work, issues in phase retrieval in the coherent diffractive imaging (CDI) technique, from discussion on parameters for setting up a CDI experiment to evaluation of the goodness of the final reconstruction, are discussed. The distribution of objects under study by CDI often cannot be cross-validated by another imaging technique. It is therefore important to make sure that the developed CDI procedure delivers an artifact-free object reconstruction. Critical issues that can lead to artifacts are presented and recipes on how to avoid them are provided.},
+    author = {Latychevskaia, Tatiana},
+    doi = {10.1364/ao.57.007187},
+    file = {:home/dieu/Downloads/ao-57-25-7187.pdf:pdf},
+    issn = {23318422},
+    journal = {arXiv},
+    number = {25},
+    pmid = {30182978},
+    title = {{Iterative phase retrieval in coherent diffractive imaging: practical issues}},
+    volume = {57},
+    year = {2018}
+}
+@article{Bunk2008,
+    abstract = {The ptychographical iterative engine (PIE) algorithm is examined with both simulated and experimental scanning coherent-diffraction microscopy data. The optimum overlap in terms of image quality, dose on the sample and time of measurements is determined using simulated diffraction data. The validity of the results is supported by experimental helium-neon laser light diffraction data. {\textcopyright} 2007 Elsevier B.V. All rights reserved.},
+    author = {Bunk, Oliver and Dierolf, Martin and Kynde, S{\o}ren and Johnson, Ian and Marti, Othmar and Pfeiffer, Franz},
+    doi = {10.1016/j.ultramic.2007.08.003},
+    file = {:home/dieu/Downloads/1-s2.0-S0304399107001969-main.pdf:pdf},
+    issn = {03043991},
+    journal = {Ultramicroscopy},
+    keywords = {Diffractive imaging,Lensless imaging,Phase retrieval,Ptychography},
+    number = {5},
+    pages = {481--487},
+    title = {{Influence of the overlap parameter on the convergence of the ptychographical iterative engine}},
+    volume = {108},
+    year = {2008}
+}
+@article{Brady2009,
+    abstract = {We demonstrate the use of transverse translation-diverse phase retrieval as a method for the measurement of wavefronts in situations where the detected intensity patterns would be otherwise undersampled. This technique involves using a smaller moving subaperture to produce a number of adequately sampled intensity patterns. The wavefront is then retrieved using an optimization jointly constrained by them. Expressions for the gradient of an error metric with respect to the optimization parameters are given. An experimental arrangement used to measure the transmitted wavefront of a plano-convex singlet using this technique is described. The results of these measurements were repeatable to within approximately lambda/100 RMS.},
+    author = {Brady, Gregory R. and Guizar-Sicairos, Manuel and Fienup, James R.},
+    doi = {10.1364/oe.17.000624},
+    file = {:home/dieu/Downloads/GRB{\_}OpExp2009{\_}TransDiv.pdf:pdf},
+    issn = {1094-4087},
+    journal = {Optics Express},
+    number = {2},
+    pages = {624},
+    title = {{Optical wavefront measurement using phase retrieval with transverse translation diversity}},
+    volume = {17},
+    year = {2009}
+}
+@article{Kume2017,
+    abstract = {{\textcopyright} 2017 SPIE. An X-ray ellipsoidal mirror requires nanometer-level shape accuracy for its internal surface. Owing to the difficulty in processing the surface, electroforming using a high precision master mandrel has been applied to mirror fabrication. In order to investigate the replication accuracy of electroforming, a measurement method for the entire internal surface of the mirror must be developed. The purpose of this study is to evaluate the shape replication accuracy of electroforming. In this study, a three-dimensional shape measurement apparatus for an X-ray ellipsoidal mirror is developed. The apparatus is composed of laser probes, a contact probe, reference flats, a z-axis stage, and a rotation table. First, longitudinal profiles of a mandrel or mirror placed vertically on the rotation table are measured at several angular positions. Subsequently, without realignment of the measured sample, circularity at every height is measured at regular intervals of 0.1 mm. During each measurement, the effect of motion errors is calculated and subtracted from each profile by referring to the distances between the probes and reference flats. Combining the circularity data with the longitudinal profiles, a three-dimensional error distribution of the entire surface is obtained. Using a mandrel with nanometer-level shape accuracy and a replicated mirror, the performance of the measurement apparatus and the replication accuracy are evaluated. Measurement repeatability of single-nanometer order and replication accuracy of sub-100-nm order are confirmed.},
+    author = {Kume, Takehiro and Takei, Yoshinori and Egawa, Satoru and Yamaguchi, Gota and Motoyama, Hiroto and Mimura, Hidekazu},
+    doi = {10.1117/12.2273666},
+    file = {:home/dieu/Downloads/103850O.pdf:pdf},
+    isbn = {9781510612273},
+    issn = {1996756X},
+    number = {September 2017},
+    pages = {22},
+    title = {{Three-dimensional shape measurement for x-ray ellipsoidal mirror}},
+    year = {2017}
+}
