5章のミラーのBessel点での把持について書いた

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -173,3 +173,32 @@
     title = {{Three-dimensional shape measurement for x-ray ellipsoidal mirror}},
     year = {2017}
 }
+@article{Senba2010,
+    abstract = {The long trace profiler (LTP) at SPring-8 has been upgraded to improve stability and resolution of slope measurement. The performances of the upgraded LTP at SPring-8 are presented by cross-checking measurements on a flat mirror with data obtained using Nanometer Optical Component Measuring Machine (NOM) at the Helmholtz Zentrum Berlin / BESSY-II. {\textcopyright} 2009 Elsevier B.V. All rights reserved.},
+    author = {Senba, Y. and Kishimoto, H. and Ohashi, H. and Yumoto, H. and Zeschke, T. and Siewert, F. and Goto, S. and Ishikawa, T.},
+    doi = {10.1016/j.nima.2009.12.007},
+    file = {:home/dieu/Downloads/1-s2.0-S016890020902302X-main.pdf:pdf},
+    issn = {01689002},
+    journal = {Nuclear Instruments and Methods in Physics Research, Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+    keywords = {Long trace profiler,Optical metrology,Surface profile measurement,Synchrotron radiation,X-ray mirror},
+    number = {2-3},
+    pages = {237--240},
+    publisher = {Elsevier},
+    title = {{Upgrade of long trace profiler for characterization of high-precision X-ray mirrors at SPring-8}},
+    url = {http://dx.doi.org/10.1016/j.nima.2009.12.007},
+    volume = {616},
+    year = {2010}
+}
+@article{Koning2009,
+    abstract = {We revisited the treatment of the influence of the support conditions and the resulting bending of a scale on the positions of its graduation lines. In contrast to earlier publications, we did not calculate the position deviation with respect to the case without any bending. Due to the production processes used today, this is inappropriate and leads to an overestimation of the related uncertainty contribution. We also extended the treatment from two lines to all lines of the scale and included a finite starting point of the graduation. We verified our analytical model by means of FEM calculations. In addition, we showed that a first order Taylor expansion yields sufficiently accurate results for the position deviations and leads to simple equations for their size. Because line scale measurements are related to the zero line the constant term of the Taylor expansion cancels and the remaining coefficient is identical to the sensitivity coefficient required in the determination of the standard uncertainty contribution. If it is sufficient to suppress the position dependence and to consider only the case where the sample is supported at symmetric positions, then a new, simple equation is obtained for the resulting uncertainty contribution. Finally we showed that due to the position dependence of the deviations the scale coefficient of the scale, which is obtained by a linear fit to the deviations of the line positions of the scale from their nominal values, is also influenced, which has apparently not been noticed up to now. If the line standard used to disseminate the unit of length has not been designed carefully then the resulting change in the scale coefficient exposes a practical limit to the related achievable length-dependent uncertainty contribution. {\textcopyright} 2009 BIPM and IOP Publishing Ltd.},
+    author = {K{\"{o}}ning, R. and Przebierala, B. and Weichert, C. and Fl{\"{u}}gge, J. and Bosse, H.},
+    doi = {10.1088/0026-1394/46/3/005},
+    file = {:home/dieu/Downloads/K{\"{o}}ning{\_}2009{\_}Metrologia{\_}46{\_}187.pdf:pdf},
+    issn = {00261394},
+    journal = {Metrologia},
+    number = {3},
+    pages = {187--195},
+    title = {{A revised treatment of the influence of the sample support on the measurement of line scales and the consequences for its use to disseminate the unit of length}},
+    volume = {46},
+    year = {2009}
+}
