1章の波面計測を書いて3章の位相回復の話を整理

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{jsbook}
 \usepackage{style/pethesis}
 \usepackage{amsmath,amssymb,bm}
+\usepackage{caption}
 \usepackage{minitoc}
 \usepackage{hhline}
 %\usepackage{style/algorithmic}
