--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -13,7 +13,7 @@
         title = "{FOXSI-4: Instrument Upgrades for a Proposed Fourth Focusing Optics X-Ray Solar Imager Sounding Rocket Experiment}",
      keywords = {7534 Radio emissions, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7549 Ultraviolet emissions, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7554 X-rays, gamma rays, and neutrinos, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7594 Instruments and techniques, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY},
     booktitle = {AGU Fall Meeting Abstracts},
-         year = 2019,
+         year = {2019},
        volume = {2019},
         month = dec,
           eid = {SH31C-3315},
