参考文献を引用順に変更

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -86,7 +86,7 @@
 %\renewcommand{\refname}{引用文献}
 \thispagestyle{empty}
 
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \bibliography{references}
 
 \newpage
